# Backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json  test.py
.sqlx/: query-03d002b84ae6c576dbefdd3fd1e625d8e30bc53f8e14801d97ef70405eb26d8a.json  query-05a9fe81cc67500eefe9d032191b78363fa8081d5e4bae456b7773631cba4a9f.json  query-07390d51136ba41cac27e1873d59c471c2d2a26690a8fa37a774f2031a4395f4.json  query-07e0f121f361b13cd393f50ce13a643b697f78179056929c596d685eab43046a.json  query-0890bd1f3541762cf0f7960caccee274e298eb372f192e176aa7e0394fca61d3.json  query-0c35023df30bbd5c0ff57794f92b7066ab28a77dd6b6e48de886d9e923d9779d.json  query-14c3fd6fcd34f0ea4d795627045f4a3ef7f457b67f1cb0f4818dc8817d4587ef.json  query-17f61355914c33bdd509edb6f803d888191f54138eefd375bffe5a868e27f716.json  query-1e93e3e47e1f7f20caa154b9b811af524cb67ab714a51477f8fc5dc61c62ecca.json  query-24f0008825580e498b3d7ca21580d564722c8310333a5ffeb27145ea0e91a9ca.json  query-255bcce5fbe0bb6cf643fa9d65360ccf5be34af84a3e04dab2f916f50ff80102.json  query-2916fa146e03062cc0c9cabb0bcda05799066396cea74ce002444250169e342e.json  query-2b4dfdcd25ae89e9b7ce390d4497615c2b4eac89724bea74486df6bd2c754d71.json  query-2c4869f0c59b942ef0736b14bdc41458ac5b86224adb99057e033a071f74d74b.json  query-2c91660b55a8affef75ec1b17e8890b9ab2d26e26fbd4c741b68e5f07680bf83.json  query-2cc72026e500aff55ca92bb883dfeded305b5af2f49c486bff2a7e473a5a7867.json  query-2d2a536549051cd4bb18fd2b46a6a8f1d0a8e63edf8bb59694dfbd79c122f61b.json  (+87 more)
db_scheme/: scheme.sql
src/: api_documentation.rs  communication.rs  (+11 more)
