[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
hmac = "0.12.1"
sha2 = "0.10.2"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.2", features = [
	"postgres",
	"runtime-tokio-rustls",
	"chrono",
	"macros",
	"bigdecimal",
] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1.0.44"
chrono = { version = "0.4.26", features = ["serde", "clock"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
web3 = "0.19"
hex = "0.4.3"
censor = "0.3.0"
futures = "0.3.28"
ethabi = "18.0.0"
serde_with = "3.1"
utoipa = { version = "3", features = ["chrono", "decimal"] }
utoipa-swagger-ui = "3.1.5"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
# strum = "0.25.0"
# strum_macros = "0.25.3"
